using json instead of Jinja2 version

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,12 @@
 
     <script>
         var map = L.map('map').setView([44.5, -69.0], 8);
+        fetch('/coordinates')
+    .then(response => response.json())
+     .then(data => {
 
-        var near_coordinates = {{ near_coordinates | tojson | safe }};
-        var far_coordinates = {{ far_coordinates | tojson | safe }};
+        var near_coordinates = data.near_coordinates;
+        var far_coordinates = data.far_coordinates;
 
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '© OpenStreetMap contributors'
@@ -46,6 +49,10 @@
             var marker = createMarker(coord[1], coord[0], 'blue');
             marker.addTo(map);
         });
+    })
+    .catch(error => {
+    console.error('Error fetching coordinates:', error);
+  });
     </script>
 </body>
 </html>
